--- a/app/assets/stylesheets/common/base/compose.scss
+++ b/app/assets/stylesheets/common/base/compose.scss
@@ -18,7 +18,7 @@
   z-index: 999;
   transition: height 250ms ease, background 250ms ease;
   background-color: $secondary;
-  box-shadow: 0 -5px 40px rgba($primary, .15);
+  box-shadow: 0 -2px 40px rgba($primary, .12);
 
   .reply-area {
     display: flex;
@@ -90,8 +90,8 @@
   }
 
   .reply-to {
-    color: $tertiary;
-    margin-bottom: 5px;
+    color: $primary-medium;
+    margin: 5px 0 10px 0;
     display: flex;
     align-items: center;
     i {
@@ -115,7 +115,6 @@
   .whisper,
   .display-edit-reason {
     font-style: italic;
-    color: $primary-medium !important;
   }
 
   #edit-reason {
@@ -258,6 +257,12 @@
     flex-basis: 50%;
     display: flex;
     flex-direction: row-reverse;
+    a {
+      color: $primary-medium;
+      &:hover {
+        color: $tertiary;
+      }
+    }
     .toggle-preview {
       order: 2;
     }
